--- a/brainer/huella-de-carbono-personal/HTML/politica_de_calidad.html
+++ b/brainer/huella-de-carbono-personal/HTML/politica_de_calidad.html
@@ -495,20 +495,20 @@
   <div class="bg-particles" id="particles"></div>
 
   <!-- Barra de redes sociales -->
-  <div class="social-bar">
-    <a href="#" aria-label="X" title="Síguenos en X">
+   <div class="social-bar">
+    <a href="https://www.x.com/VerdeLatid74290" aria-label="X" title="Síguenos en X">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/x.svg" alt="X"
         style="filter: invert(0.2) sepia(1) saturate(5) hue-rotate(180deg);">
     </a>
-    <a href="#" aria-label="Facebook" title="Síguenos en Facebook">
+    <a href="https://www.facebook.com/profile.php?id=61577069371910" aria-label="Facebook" title="Síguenos en Facebook">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" alt="Facebook"
         style="filter: invert(0.2) sepia(1) saturate(5) hue-rotate(220deg);">
     </a>
-    <a href="#" aria-label="YouTube" title="Síguenos en YouTube">
+    <a href="https://www.youtube.com/@Latidoverde" aria-label="YouTube" title="Síguenos en YouTube">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" alt="YouTube"
         style="filter: invert(0.2) sepia(1) saturate(5) hue-rotate(350deg);">
     </a>
-    <a href="#" aria-label="Instagram" title="Síguenos en Instagram">
+    <a href="https://www.instagram.com/latido.verde_public/" aria-label="Instagram" title="Síguenos en Instagram">
       <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" alt="Instagram"
         width="24" height="24">
     </a>
