--- a/brainer/index.html
+++ b/brainer/index.html
@@ -317,7 +317,7 @@
       backdrop-filter: blur(10px);
       border: 1px solid var(--glass-border);
       border-radius: 20px;
-      margin: 40px 0;
+      margin: 40px 360px;
       padding: 30px;
       box-shadow: var(--shadow);
     }
@@ -332,7 +332,7 @@
     .contact-item {
       background: var(--glass-bg);
       border: 1px solid var(--glass-border);
-      border-radius: 15px;
+      border-radius: 1500px;
       padding: 20px;
       text-align: center;
       transition: all 0.3s ease;
@@ -340,7 +340,7 @@
     }
 
     .contact-item:hover {
-      transform: translateY(-5px);
+      transform: translateY(-50px);
       box-shadow: 0 10px 30px rgba(0,0,0,0.2);
     }
 
@@ -440,19 +440,19 @@
 
   <!-- Barra de redes sociales -->
   <div class="social-bar">
-    <a href="#" aria-label="X" title="Síguenos en X">
+    <a href="https://www.x.com/VerdeLatid74290" aria-label="X" title="Síguenos en X">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/x.svg" alt="X"
         style="filter: invert(0.2) sepia(1) saturate(5) hue-rotate(180deg);">
     </a>
-    <a href="#" aria-label="Facebook" title="Síguenos en Facebook">
+    <a href="https://www.facebook.com/profile.php?id=61577069371910" aria-label="Facebook" title="Síguenos en Facebook">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/facebook.svg" alt="Facebook"
         style="filter: invert(0.2) sepia(1) saturate(5) hue-rotate(220deg);">
     </a>
-    <a href="#" aria-label="YouTube" title="Síguenos en YouTube">
+    <a href="https://www.youtube.com/@Latidoverde" aria-label="YouTube" title="Síguenos en YouTube">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" alt="YouTube"
         style="filter: invert(0.2) sepia(1) saturate(5) hue-rotate(350deg);">
     </a>
-    <a href="#" aria-label="Instagram" title="Síguenos en Instagram">
+    <a href="https://www.instagram.com/latido.verde_public/" aria-label="Instagram" title="Síguenos en Instagram">
       <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" alt="Instagram"
         width="24" height="24">
     </a>
